Added: Google tag

--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,15 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XGTP0M91S1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+
+  gtag('config', 'G-XGTP0M91S1');
+</script>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
   <script>
