FInished with work so far.

--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,7 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XGTP0M91S1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
