Added: Google Maps functionality

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKtjmUOgEduhzC2lqIaH3dZHU7RuPwReY&callback=initMap"></script>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XGTP0M91S1"></script>
